--- a/references.bib
+++ b/references.bib
@@ -2917,3 +2917,10 @@
   year={2016},
   publisher={JSTOR}
 }
+
+@manual{stan2023reference,
+  title = {{Stan} Reference Manual},
+  author = {{Stan Development Team}},
+  year = {2023},
+  url = {https://mc-stan.org/docs/reference-manual/index.html}
+}
