Space-time? Hardly knew her

--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -181,10 +181,10 @@ Exactly the focus of Chapter \@ref(naomi-aghq) is on expanding the space of mode
 ## Spatio-temporal statistics {#st-statistics}
 
 Space and time are important features of infectious disease data, including those related to HIV.
-The field of spatio-temporal statistics [@cressie2015statistics] is concerned with such observations, which are indexed by spatial and temporal location.
+The field of spatio-temporal statistics [@cressie2015statistics] is concerned with such observations, indexed by spatial and temporal location.
 It unifies the fields of spatial statistics [@bivand2008applied], concerned with observations indexed by space, and time series analysis [@shumway2017time], concerned with observations indexed by time.
 First, Section \@ref(properties) characterises the shared properties of spatio-temporal data.
-Then, Section \@ref(small-area-estimation) describes how these properties facilitate the class of small-area estimation methods that the work in this thesis falls into.
+Then, Section \@ref(small-area-estimation) describes how these properties facilitate the class of small-area estimation methods used in this thesis.
 
 ### Properties of spatio-temporal data {#properties}
 
@@ -219,39 +219,33 @@ In "The Design of Experiments" @fisher1936design observed that neighbouring crop
 This observation was later termed Tobler's first law of geography: "everything is related to everything else, but near things are more related than distant things" [@tobler1970computer].
 As well as space, Tobler's first law applies to time, in that observations made close together in time tend to be similar.
 
-This law can be formalised using space-time covariance functions.
+This law can be formalised using space-time covariance functions, measuring the dependence of observations across their spatial and temporal dimensions.
 A space-time covariance structure [@porcu202130] is said to be separable when it can be factorised as a product of individual spatial and temporal covariances, and nonseparable when it can't.
 A separable space-time covariance could have spatial and temporal components which are either independent and identically distributed (IID) or structured [@knorr2000bayesian].
 Spatial covariance functions are called isotropic when they apply equally in all directions, and stationary when they are invariant over space.
-Temporal covariance structures are often periodic.
+Temporal covariance structures are often periodic, corresponding to daily, weekly, monthly, quarterly, or yearly cycles.
 
-Because of their covariance structure, spatio-temporal data are not IID.
-Only one observation of a spatio-temporal process can typically be realised.
+That spatio-temporal data are rarely IID is a statistically important point.
+The consequence is that it is rare to have true replicates available.
+Typically, only a single instance of a spatio-temporal can ever be realised.
 
 #### Size
 
 Data with both spatial and temporal dimensions are often large.
-This makes storage and mathematical operations on spatio-temporal data potentially challenging.
-Furthermore, models for spatio-temporal data typically require many parameters.
+For example, observations collected every week across a number of sites in a country can easily number in the thousands.
+Storage and mathematical operations with large spatio-temporal data can be challenging.
+
+Further, models for spatio-temporal data typically require many parameters.
 Whereas large IID data can be modelled using a small number of parameters, each observation in a spatio-temporal dataset may need to be characterised by its own parameters.
-Large data combined with large models make the particular mathematical operation of Bayesian inference challenging for spatio-temporal data.
+In combination, large data (big $n$) and models with a large number of parameters (big $d$) make Bayesian inference, and other complex mathematical operations, challenging for spatio-temporal data.
 
 ### Small-area estimation {#small-area-estimation}
 
 Data always has some cost to collect.
 This cost can be significant and prohibitive, especially for data relating to people where collection is difficult to automate.
-As a result, given the large number of possible locations in space and time, often no or limited direct observations may be available for any given space-time location.
+In spatio-temporal statistics, there are a large number of possible locations in space and time.
+Given the cost of data collection, often no or limited direct observations may be available for any given space-time location.
 Direct estimates of indicators of interest are either impossible or inaccurate in this setting.
-
-Small-area estimation [SAE; @pfeffermann2013new] methods aim to overcome the limitations of small data by sharing information.
-In the spatio-temporal setting sharing of information occurs across space and time.
-Prior knowledge that observations in one spatio-temporal location are correlated with those at another (Section \@ref(correlation-structure)) can be used to improve estimates.
-Figures \@ref(fig:zmb-maps) and \@ref(fig:zmb-scatter) illustrate the unreliability of direct estimates from small sample sizes, as well as the way in which a spatial model may be used to partially overcome this limitation.
-
-SAE methods are more generally useful when data are limited for subpopulations of interest.
-These subpopulations could be generated by spatio-temporal variables, as well as by other variables such as demographics.
-Just as we expect there to be spatio-temporal correlation structure, we also can expect there to be demographic correlation structure.
-For example, those of the same sex are more likely to be similar, as are those of similar ages or socio-economic strata.
 
 (ref:zmb-maps) Simulation of a simple random sample $y_i \sim \text{Bin}(m, p_i)$ with varying sample size $m = 5, 25, 125$ in each of the $i = 1, \ldots, 156$ constituencies of Zambia. Direct estimates were obtained by the empirical ratio of data to sample size. Modelled estimates were obtained using a logistic regression with linear predictor given by an intercept and a spatial random effect. Estimates of HIV indicators for Zambia have previously been generated at the district-level, comprising 116 spatial units. Moving forward, there is interest in generating estimates at the higher-resolution constituency level, as program planning is devolved locally. The viridis colour palette, as implemented by the `viridis` R package [@viridis], used in this figure, and often throughout this thesis, was designed to be perceptually uniform and accessible to colourblind viewers [@smith2015better]. This figure was adapted from a presentation given for the Zambia HIV Estimates Technical Working Group, available from [`https://github.com/athowes/zambia-unaids`](https://github.com/athowes/zambia-unaids).
 
@@ -265,11 +259,26 @@ knitr::include_graphics("figures/bayesian/zmb-maps.png")
 knitr::include_graphics("figures/bayesian/zmb-scatter.png")
 ```
 
+Small-area estimation [SAE; @pfeffermann2013new] methods aim to overcome the limitations of small data by sharing information.
+In the spatio-temporal setting sharing of information occurs across space and time.
+Prior knowledge that observations in one spatio-temporal location are correlated with those at another (Section \@ref(correlation-structure)) can be used to improve estimates.
+
+Figures \@ref(fig:zmb-maps) and \@ref(fig:zmb-scatter) illustrate the unreliability of direct estimates from small sample sizes, and the benefit of using a spatial model to overcome this limitation.
+The effect is most pronounced for the sample size of 5, where the only possible direct estimates are 0, 0.2, 0.4, 0.6, 0.8 and 1.
+Using a spatial model to borrow information across space in this case results in improvement of the Pearson correlation coefficient between the estimates and the true underlying values from 0.34 to 0.53.
+
+SAE methods are not only useful in the spatio-temporal setting.
+More generally, they apply in any situation where data are limited for subpopulations of interest.
+Just as these subpopulations can be generated by spatio-temporal variables, they can be generated by other variables.
+One such example is demographic variables.
+Analogous to spatio-temporal correlation structure, we also can often expect there to be demographic correlation structure.
+For example, those of the same sex are more likely to be similar, as are those of similar ages or socio-economic strata.
+
 ## Model structure {#model-structure}
 
-Section \@ref(correlation-structure) described that in spatio-temporal statistics observations are related to each other, and it is inappropriate to treat data as IID.
-This section discusses ways to encode relations between observations mathematically via statistical models.
-First, simple structures are discussed such as the linear model, before moving on to more expressive structures.
+The spatio-temporal data used in this thesis is not IID (Section \@ref(correlation-structure)).
+This section discusses ways to use statistical models to encode more complex relations between observations mathematically.
+Simple structures are discussed first, such as the linear model, before moving on to the more expressive structures used throughout the thesis.
 
 ### Linear model
 
